--- a/wiki/trunk/index.html
+++ b/wiki/trunk/index.html
@@ -123,7 +123,7 @@ made elsewhere.</p>
 
 <p>QOF is an offshoot from the <a href="http://www.gnucash.org/">GnuCash Project</a>, 
 where this framework is a deep, central component. QOF is basically
-the <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=gnucash&amp;from=index&amp;do=create" rel="nofollow">?</a>GnuCash</span> &quot;engine&quot; with all of the financial objects removed. As such,
+the GnuCash &quot;engine&quot; with all of the financial objects removed. As such,
 QOF is &quot;tried and true&quot;, and has proven its worth.</p>
 
 <hr />
@@ -131,7 +131,7 @@ QOF is &quot;tried and true&quot;, and has proven its worth.</p>
 <h2><span id="functions">Function</span></h2>
 
 <p>Besides the query framework, QOF also provides a number of other
-base functions from <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=gnucash&amp;from=index&amp;do=create" rel="nofollow">?</a>GnuCash</span> and a few extensions of its own:</p>
+base functions from GnuCash and a few extensions of its own:</p>
 
 <ul>
 <li><p><strong>Universally-Unique 128-bit identifiers</strong> These can be used to reference an 
@@ -213,7 +213,7 @@ the query to complete and return data in papers. In other words, QOF provides
 scalability: instead of the all-or-nothing approach, it provides a middle
 ground, allowing small fast apps to access huge databases.</p>
 
-<p><em>Status:</em> The <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=gnucash&amp;from=index&amp;do=create" rel="nofollow">?</a>GnuCash</span> backend provides access to file and to SQL
+<p><em>Status:</em> The GnuCash backend provides access to file and to SQL
 storage. However, not all of this code has been abstracted out in a generic way
 to be brought back into QOF. Linas has got the major pieces ready to go, in the
 DWI project, but they're not integrated yet. Neil has added support for partial
@@ -253,7 +253,7 @@ storage backend for and others.
 
 <h2><span id="download">Downloads</span></h2>
 
-<h3><span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=sourceforge&amp;from=index&amp;do=create" rel="nofollow">?</a>SourceForge</span></h3>
+<h3>SourceForge</h3>
 
 <p>The source code release for v0.8.1 is available from <a title="qof-0.8.1.tar.gz" href="https://alioth.debian.org/frs/download.php/3059/qof-0.8.1.tar.gz">
 Alioth</a>. Future releases will be made from Alioth.</p>
@@ -276,11 +276,11 @@ first to include v0.7 or later.</p>
 
 <h3>RPM packages</h3>
 
-<p>There is a sample .spec file available in QOF CVS, available have been prepared for v0.6.4 in Fedora 4 and 5 as well as <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=opensuse&amp;from=index&amp;do=create" rel="nofollow">?</a>OpenSuSE</span> Factory.</p>
+<p>There is a sample .spec file available in QOF CVS, available have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.</p>
 
 <h3>Mac OSX &amp; Fink</h3>
 
-<p>Packages are also possible for Fink and <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=darwinports&amp;from=index&amp;do=create" rel="nofollow">?</a>DarwinPorts</span> (Mac OSX) - a sample Finkinfo file
+<p>Packages are also possible for Fink and DarwinPorts (Mac OSX) - a sample Finkinfo file
 is provided in QOF CVS via
 <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/fink/">SourceForge</a>.</p>
 
@@ -312,30 +312,12 @@ the current development direction.</p>
 <p><a href="http://sourceforge.net/projects/qof/">
 <img src="sflogolg.png" id="sflogo" alt="SourceForge Logo"></a></p>
 
-<p><a href="./ikiwiki/wikilink/">WikiLink</a>
-AS an additional for this site, kindly double check for more information <a href="http://www.essayontime.com">essay writers</a></p>
-
 </div>
 
 <div id="footer">
 <div id="pageinfo">
 
-
-
-
-
-
-
-
-
-<div class="pagedate">
-Last edited Tue Jul 27 20:42:31 2010
-<!-- Created Thu Apr 17 17:23:00 2008 -->
 </div>
-
-</div>
-
-<!-- from Query Object Framework -->
 </div>
 
 </body>
