--- a/wiki/trunk/hacking.html
+++ b/wiki/trunk/hacking.html
@@ -36,8 +36,6 @@ hacking
 <li><a href="../#origins">Origins</a></li>
 <li><a href="../#functions">Function</a></li>
 <li><a href="../#goals">Goals</a></li>
-<li><a href="http://custom-essay-writing-service.org/index.php">
-Essay</a></li>
 <li><a href="../#status">Status</a></li>
 <li><a href="../why-qof">Why QOF?</a></li>
 <li><a href="http://www.data-freedom.org/">Data Freedom</a></li>
@@ -157,7 +155,7 @@ fi
 </pre>
 
 <div>For more information, see the source for Pilot-QOF,
-gpe-expenses or <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=cashutil&amp;from=hacking&amp;do=create" rel="nofollow">?</a>CashUtil</span> which include an optional
+gpe-expenses or CashUtil which include an optional
 method to build from QOF CVS source as well as the package.</div>
 
 <div>
@@ -215,7 +213,7 @@ version of QOF.</p>
 
 <div>
 <p>DWI - Data With Interaction - was in development
-but it's <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=sourceforge&amp;from=hacking&amp;do=create" rel="nofollow">?</a>SourceForge</span> project has seen little recent
+but it's SourceForge project has seen little recent
 activity and is now out of date with the main QOF library.
 DWI support will be retained in CVS but will not be implemented
 in libqof2.</p>
@@ -228,18 +226,18 @@ in libqof2.</p>
 <div>
 <p>The date and time handlers have been overhauled and
 there are large changes. Timespec has been deprecated
-and replaced by <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qoftime&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofTime</span> which is an opaque type. <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qoftime&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofTime</span>
+and replaced by QofTime which is an opaque type. QofTime
 has completely replaced the previous code and includes
 handlers to avoid pitfalls of incompatible date/time format
-conversions. <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qoftime&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofTime</span> only handles times in seconds.
-All date handling is done exclusively in a new type, <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qofdate&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofDate</span>,
+conversions. QofTime only handles times in seconds.
+All date handling is done exclusively in a new type, QofDate,
 an extended version of struct tm. Applications using QOF
-should now use <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qoftime&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofTime</span> to replace time_t and <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qofdate&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofDate</span> to
+should now use QofTime to replace time_t and QofDate to
 replace struct tm. Functions like localtime, gmtime, mktime
 and time can be used externally - subject to the more limited
 range of values supported in each case.</p>
 <p>QOF_TYPE_DATE is now deprecated, to be replaced by
-QOF_TYPE_TIME. This is the first change in the <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qofobject&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofObject</span>
+QOF_TYPE_TIME. This is the first change in the QofObject
 API in libqof1 and requires significant changes within
 all QOF objects to be supported by libqof2. libqof2 will
 therefore use a incremented QOF_OBJECT_VERSION. libqof1
@@ -248,13 +246,13 @@ optional extra. Packages using QOF_TYPE_TIME need to depend
 on QOF &gt;= 0.7.0</p>
 <p>QofTime is opaque, firstly, to implement strict validity
 checking and secondly to ensure consistent handling
-within objects. <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qoftime&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofTime</span> and <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qofdate&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofDate</span> now support all
+within objects. QofTime and QofDate now support all
 times and dates within a couple of dozen times the age of
 the universe by using 64bit values wherever necessary.</p>
 <p>0.7.0 introduced strftime and strptime extended code
 based on the Debian coreutils package (specifically the 'date'
 command) and the glibc source code, providing support for
-nanosecond formats and the full range of <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qoftime&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofTime</span> and <span class="createlink"><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=qofdate&amp;from=hacking&amp;do=create" rel="nofollow">?</a>QofDate</span>.<a href="http://www.nationhighschool.com/eligibility/index.asp">Get high school diploma</a></p>
+nanosecond formats and the full range of QofTime and QofDate.
 </div>
 
 <hr>
@@ -447,12 +445,7 @@ libqof2, the aim is to get all those done in libqof1.
 </p><p>Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; December 2007.
 </p></div>
 
-<p><a href="http://cvresumewritingservices.org/" rel="dofollow,index,follow">resume writing services</a> 
-<a href="http://custom-paper-writing.com/" rel="dofollow,index,follow">buy research papers</a> </p>
-
 <hr />
-
-<p><a href="./../ikiwiki/wikilink/">WikiLink</a></p>
 
 </div>
 
